# otoposuto

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  pyproject.toml
otoposuto/: colors.py  config.py  main.py  posted_content.py  utils.py
otoposuto/modules/: base.py  dumb.py  hugo.py
tests/: conftest.py  test_help.py  test_keyboard_interupt.py
